--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 REACT_APP_PRODUCTS=http://localhost:3040/api/v1/products
 REACT_APP_USERS=http://localhost:3040/api/v1/users
 REACT_APP_TRANSACTIONS=http://localhost:3040/api/v1/transactions
+
+REACT_APP_SOCKET_HOST=http://localhost:3001
