--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "chart.js": "^4.0.1",
     "clsx": "^1.2.1",
     "dotenv": "^16.0.3",
+    "howler": "^2.2.3",
     "moment": "^2.29.4",
     "node-sass": "^8.0.0",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.0.1",
+    "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^5.3.4",
