fix: socket connection (transaction event)

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 REACT_APP_PRODUCTS=<REACT_APP_PRODUCTS>
 REACT_APP_USERS=<REACT_APP_USERS>
 REACT_APP_TRANSACTIONS=<REACT_APP_TRANSACTIONS>
+
+REACT_APP_SOCKET_HOST=http://localhost:3001
