--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "^4.11.5",
     "@mui/icons-material": "^5.10.16",
     "@mui/material": "^5.10.16",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -27,6 +28,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "^18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "socket.io-client": "^4.5.4",
