--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-REACT_APP_PRODUCTS=http://localhost:3040/api/v1/products
-REACT_APP_USERS=http://localhost:3040/api/v1/users
-REACT_APP_TRANSACTIONS=http://localhost:3040/api/v1/transactions
+REACT_APP_PRODUCTS=https://my-workshop.onrender.com/api/v1/products
+REACT_APP_USERS=https://my-workshop.onrender.com/api/v1/users
+REACT_APP_TRANSACTIONS=https://my-workshop.onrender.com/api/v1/transactions
 
 REACT_APP_SOCKET_HOST=http://localhost:3001
